objects/BRP_Sales_Settings2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HsFormURL__c</fullName>
        <label>HsFormURL</label>
        <length>51</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Name__c</fullName>
        <label>Sales Office Name</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BRP Sales Settings</label>
    <listViews>
        <fullName>All_BRP_Sales_Settings</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Sales_Office_Name__c</columns>
        <columns>HsFormURL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All BRP Sales Settings</label>
    </listViews>
</CustomObject>